--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="panel panel-primary">
-                        <div class="panel-heading">Log Information</div>
+                        <div class="panel-heading"><strong>Log Information</strong></div>
                         <div class="panel-body">
                             <strong>Operator:</strong><br>
                             {{ entry.operator }}<br>
