--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -43,7 +43,7 @@
                     {% endif %}
                     {% if medical is null %}
                     {% else %}
-                        <div class="row" id="Medical">
+                        <div class="panel panel-info" id="Medical">
                             <div class="panel-heading"><strong>Medical</strong></div>
                             <div class="panel-body">
                                 <strong>Injury Type: </strong>
