--- a/app/Resources/views/emailFireRegister.html.twig
+++ b/app/Resources/views/emailFireRegister.html.twig
@@ -3,13 +3,13 @@
 <h3>{{ heading }}</h3>
 
 {% if time_in %}
-    {{ name }}, you have been signed into the Event Control site register at {{ time_in }}.
-
-    Please remember to sign-out before leaving site, this can be done by visiting the control room or calling 01225 580811 or visiting the control room in person.
+    {{ name }}, you have been signed into the Event Control site register at {{ time_in|date('H:i:s d-m-Y' , "Europe/London") }}.<br>
+    <br>
+    Please remember to sign-out before leaving site, this can be done by visiting the control room or calling 01225 580811.
 {% endif %}
 
 {% if time_out %}
-    {{ name }}, you have been signed out of the Event Control site register at {{ time_out }}.  Thank you for your assistance.
-    
-    If you return to site remember to sign in, this can be done by visiting the control room or calling 01225 580811 or visiting the control room in person.
+    {{ name }}, you have been signed out of the Event Control site register at {{ time_out|date('H:i:s d-m-Y' , "Europe/London") }}.  Thank you for your assistance.<br>
+    <br>
+    If you return to site remember to sign in, this can be done by visiting the control room or calling 01225 580811.
 {% endif %}
