--- a/app/Resources/views/emailFireRegister.html.twig
+++ b/app/Resources/views/emailFireRegister.html.twig
@@ -5,7 +5,10 @@
 {% if time_in %}
     {{ name }}, you have been signed into the Event Control site register at {{ time_in|date('H:i:s d-m-Y' , "Europe/London") }}.<br>
     <br>
-    Please remember to sign-out before leaving site, this can be done by visiting the control room or calling 01225 580811.
+    Please remember to sign-out before leaving site, this can be done by visiting the control room, calling 01225 580811 or by clicking the link below.
+    
+    {{ link }}
+    
 {% endif %}
 
 {% if time_out %}
