Updated sign-in email template

--- a/app/Resources/views/emailFireRegister.html.twig
+++ b/app/Resources/views/emailFireRegister.html.twig
@@ -5,10 +5,10 @@
 {% if time_in %}
     {{ name }}, you have been signed into the Event Control site register at {{ time_in|date('H:i:s d-m-Y' , "Europe/London") }}.<br>
     <br>
-    Please remember to sign-out before leaving site, this can be done by visiting the control room, calling 01225 580811 or by clicking the link below.
-    
-    <a href="{{ path('hash_signout', {'hash': hash}) }}">{{ path('hash_signout', {'hash': hash}) }}</a>
-    
+    Please remember to sign-out before leaving site, this can be done by visiting the control room, calling 01225 580811 or by clicking the link below.<br>
+    <br>
+    <a href="{{ url('hash_signout', {'hash': hash}) }}">{{ url('hash_signout', {'hash': hash}) }}</a>
+    <br>
     This will expire at {{ expire|date('H:i:s d-m-Y' , "Europe/London") }}
     
 {% endif %}
