--- a/app/Resources/views/userList.html.twig
+++ b/app/Resources/views/userList.html.twig
@@ -27,7 +27,7 @@ System Users
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    {% for user in Users %}
+                                    {% for user in users %}
                                         <tr>
                                             <td>{{ user.username }}</td>
                                             <td>{{ user.name }}</td>
