--- a/app/Resources/views/userList.html.twig
+++ b/app/Resources/views/userList.html.twig
@@ -32,7 +32,7 @@ System Users
                                             <td>{{ user.Username }}</td>
                                             <td>{{ user.name }}</td>
                                             <td>{{ user.email }}</td>
-                                            <td>{{ user.active }}</td>
+                                            <td>{{ user.isActive }}</td>
                                             <td><a href="{{ path('user_edit', {'id': user.Id}) }}"><span class="glyphicon glyphicon-pencil" aria-hidden="true" aria-label="Edit"></span></a></td>
                                         </tr>
                                     {% endfor %}                           
