--- a/app/Resources/views/userList.html.twig
+++ b/app/Resources/views/userList.html.twig
@@ -17,6 +17,7 @@ Control Room Users
                                         <th>Username</th>
                                         <th>Name</th>
                                         <th>Email</th>
+                                        <th>Groups</td>
                                         <th>Active?</td>
                                         <th>Edit</td>
                                     </tr>
@@ -27,6 +28,7 @@ Control Room Users
                                             <td>{{ user.Username }}</td>
                                             <td>{{ user.name }}</td>
                                             <td>{{ user.email }}</td>
+                                            <td>{{ user.groups }}</td>
                                             <td>{% if user.isActive == 1 %} True {% else %} False {% endif %}</td>
                                             <td><a href="{{ path('user_edit', {'id': user.Id}) }}"><span class="glyphicon glyphicon-pencil" aria-hidden="true" aria-label="Edit"></span></a></td>
                                         </tr>
