--- a/app/Resources/views/userList.html.twig
+++ b/app/Resources/views/userList.html.twig
@@ -28,7 +28,11 @@ Control Room Users
                                             <td>{{ user.Username }}</td>
                                             <td>{{ user.name }}</td>
                                             <td>{{ user.email }}</td>
-                                            <td>{{ user.groups }}</td>
+                                            <td>
+                                                {% for group in user.groups %}
+                                                {{ group.name }} 
+                                                {% endfor %}
+                                            </td>
                                             <td>{% if user.isActive == 1 %} True {% else %} False {% endif %}</td>
                                             <td><a href="{{ path('user_edit', {'id': user.Id}) }}"><span class="glyphicon glyphicon-pencil" aria-hidden="true" aria-label="Edit"></span></a></td>
                                         </tr>
