--- a/app/Resources/views/userList.html.twig
+++ b/app/Resources/views/userList.html.twig
@@ -17,9 +17,9 @@ Control Room Users
                                         <th>Username</th>
                                         <th>Name</th>
                                         <th>Email</th>
-                                        <th>Groups</td>
-                                        <th>Active?</td>
-                                        <th>Edit</td>
+                                        <th>Groups</th>
+                                        <th>Active?</th>
+                                        <th>Edit</th>
                                     </tr>
                                 </thead>
                                 <tbody>
