--- a/app/Resources/views/logTable2.html.twig
+++ b/app/Resources/views/logTable2.html.twig
@@ -33,7 +33,12 @@
                         {% endif %}
                         {% if log.general_description is null %}
                         {% else %}
-                            <span class="badge">{{ log.general_description[:12]|striptags ~ ' ...'  }}</span>
+                            {% if log.general_entry_closed_time is not null %}
+                                <span class="label label-default">
+                            {% else %}
+                                <span class="label label-primary">
+                            {% endif %}
+                            {{ log.general_description[:15]|striptags ~ ' ...'  }}</span>
                             </div>
                         {% endif %}
                         {% if log.medical_entry_closed_time is not null %}
@@ -41,7 +46,12 @@
                         {% endif %}
                         {% if log.medical_injury_description is null %}
                         {% else %}
-                            <span class="badge severity{{ log.medical_severity }}" >{{ log.medical_injury_description }}</span>
+                            {% if log.medical_entry_closed_time is not null %}
+                                <span class="label label-default">
+                            {% else %}
+                                <span class="label severity{{ log.medical_severity }}" >
+                            {% endif %}
+                            {{ log.medical_injury_description }}</span>
                             </div>
                         {% endif %}
                         {% if log.security_entry_closed_time is not null %}
@@ -49,7 +59,12 @@
                         {% endif %}
                         {% if log.security_description is null %}
                         {% else %}
-                            <span class="badge severity{{ log.severity }}" >{{ log.security_incident_description }}</span>
+                            {% if log.security_entry_closed_time is not null %}
+                                <span class="label label-default">
+                            {% else %}
+                                <span class="label severity{{ log.severity }}" >
+                            {% endif %}
+                            {{ log.security_incident_description }}</span>
                             </div>
                         {% endif %}
                         {% if log.lost_property_description is null %}
@@ -57,7 +72,12 @@
                             {% if log.lost_property_entry_closed_time is not null %}
                                 <div data-toggle="tooltip" data-placement="left" title="Closed: {{ log.lost_property_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}">
                             {% endif %}
-                            <span class="badge" >{{ log.lost_property_description[:12]|striptags ~ ' ...' }}</span>
+                            {% if log.lost_property_entry_closed_time is not null %}
+                                <span class="label label-default">
+                            {% else %}
+                                <span class="label label-info">
+                            {% endif %}
+                            {{ log.lost_property_description[:15]|striptags ~ ' ...' }}</span>
                             </div>
                         {% endif %}
                         </td> 
